2018-01-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Jan Egil Ruud <janegil.ruud@microchip.com>
	patch #9507: Fix UPDI chip erase
	* libavrdude.h (PROGRAMMER): add unlock method
	* avr.c (avr_unlock): Generic unlock function
	* jtag3.c: Implement unlock feature; avoid calling
	jtag3_edbg_prepare() and jtag3_edbg_signoff() on XplainedMini
	boards to work around a bug in early firmware versions;
	implement "userrow" memory region
	* main.c: Call avr_unlock() rather than avr_chip_erase() when
	encountering a locked UPDI chip

2018-01-16  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Nicolas BRULEZ
	patch #8910: ATxmega32c4 and ATxmega16c4 have wrong signatures
	bug #41388: ATxmega32c4 and ATxmega16c4 have wrong signatures
	* avrdude.conf.in (ATxmega16C4, ATxmega32C4): Fix signatures

2018-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Dennis Reimers:
	patch #8580: FT245r support to select device by serial number
	* ft245r.c (ft245r_open): Add serial number parsing.

2018-01-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Axel Simon:
	patch #9033: avrdoper backend uses libhidapi instead of libusb
	* ser_avrdoper: Add libhidapi implementation
	* stk500v2.c: Adapt #ifdefs for LIBHIDAPI
	* avrdude.1: Document change
	* doc/avrdude.texi: (Dito)

2018-01-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by David Mosberger-Tang
	patch #8924: Enable TPI for usbtiny
	* usbtiny.c: Extend to handle TPI targets
	* configure.ac: Probe for <netinet/in.h>

2018-01-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Yegor Yefremov:
	patch #9222: Enable silent build
	* configure.ac: Add AM_SILENT_RULES
	* Makefile.am: Document how to run "make" to get verbose
	build messages

2018-01-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by: Kjetil Kjeka:
	patch #9317: Support atmega64m1 as part
	* avrdue.conf.in (ATmega64M1): New entry.

2018-01-12  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Submitted David Griffith: